  and button same height and/or centered vertically
  (LP #622689)

- Tabs and newline characters in uploaded filenames are now converted to
  spaces. Same is also done in the download_file_view when setting the
  filename in the Content-Disposition header, in case there are files
  uploaded previously with newline and tab characters in the filename.
  LP #616511

3.43 (2010-08-19)
-----------------

- Changes searches so there is no label, changed buttons to say
  'search' instead of 'go'
  (LP #616868)

- Put in deprecation notice for IE6 (yay!)
  (LP #616869)

- Ensured that comment alerts work for comments made agaisnt forum posts
  (LP #614370).

- Ensured that CSV profile import decodes attributes encoded as UTF8 or latin1
  (LP #614398).

- Fixed text indexing of profiles with attributes encoded as UTF8 or latin1
  (LP #614398).

- Added a community index to the tagging enginge in order to speed up the
  community tags portlet when first loaded. On local machine loading of
  community tags portlet with OSI database went from 40s to 3ms.

- Wrote an evolve script to find content that is created or modified by a user
  no longer in the system and move that content over to a 'former user'
  profile.  The 'former user' profile is created if and only if it is needed.

- Improved search performance by not using the catalog cache for very large
  result sets, as the overhead in marshalling the result set in order to cache
  it is much greater than the overhead of running the search.  (LP #6120123)

- Added postoffice quarantine to error monitor admin ui for parallelism with
  the status view for monitoring.  (LP #613579)

- Mailin now concatenates all 'text/plain' message parts when constructing the
  document body.  Previously only the first 'text/plain' message part was used.
  This is per discussion with OSI about including forwarded messages in mailin.

- The text scrubber used for mailin now takes a new argument, 'is_reply',