@@ -16,14 +16,11 @@ def rename_user(context, old_name, new_name, merge=False, out=None):
     users = find_users(context)
 
     old_user = users.get_by_id(old_name)
-    if old_user is None:
-        raise ValueError("No such user: %s" % old_user)
-
     if old_name not in profiles:
-        raise ValueError("No such profile: %s" % old_user)
+        raise ValueError("No such profile: %s" % old_name)
 
     if merge:
-        if users.get_by_id(new_name) is None:
+        if old_user is not None and users.get_by_id(new_name) is None:
             raise ValueError("No such user: %s" % new_name)
         if new_name not in profiles:
             raise ValueError("No such profile: %s" % new_name)
@@ -31,10 +28,11 @@ def rename_user(context, old_name, new_name, merge=False, out=None):
         if out is not None:
             print >>out, "Renaming user from %s to %s" % (old_name, new_name)
 
-        for group in old_user['groups']:
-            if not users.member_of_group(new_name, group):
-                users.add_user_to_group(new_name, group)
-        users.remove(old_name)
+        if old_user is not None:
+            for group in old_user['groups']:
+                if not users.member_of_group(new_name, group):
+                    users.add_user_to_group(new_name, group)
+            users.remove(old_name)
         del profiles[old_name]
 
     else:
@@ -46,9 +44,10 @@ def rename_user(context, old_name, new_name, merge=False, out=None):
         if out is not None:
             print >>out, "Merging user %s to %s" % (old_name, new_name)
 
-        users.add(new_name, new_name, old_user['password'],
-                  old_user['groups'], encrypted=True)
-        users.remove(old_name)
+        if old_user is not None:
+            users.add(new_name, new_name, old_user['password'],
+                      old_user['groups'], encrypted=True)
+            users.remove(old_name)
 
         profile = profiles[old_name]
         del profiles[old_name]
